# dead-pixel-workspace

./: .gitignore  CLAUDE.md  cc.json  skills-lock.json
.agents/: .skill-lock.json
.claude/: launch.json  settings.local.json
assets/shared/: README.md
clients/: README.md
copywriting-skill/: 27 copywriting examples from businesses with incredible copywriters.md
davids-writing-style/: Cast and characters.docx  successful-pitch.txt
design-prompts/: academia.md  art-deco.md  bauhaus.md  botanical.md  cyberpunk.md  kinetic.md  maximalism.md  playful-geometric.md  professionalism.md  retro.md  swiss-minimialist.md  vaporwave.md  web3.md
drum-apparatus-web/: HANDOFF.md  index.html  package-lock.json  package.json  vite.config.ts
drum-apparatus-web/src/: App.svelte  app.css
drum-apparatus-web/tests/: fill-generator.test.ts  generator.test.ts  midi-encoder.test.ts  pattern-parser.test.ts  smoke.test.ts  stores.test.ts  timing-engine.test.ts  velocity-engine.test.ts
experiments/: README.md
projects/: README.md
the-brain/: 0ecfd5e3e9bb6da7ca8cd342a2d91e52_MD5.avif  263fff6512501e6aa2357d097f3cd261_MD5.avif  6fc8e8eff07b10e108268e484b6be47a_MD5.avif  CLAUDE.md  c96edc93e46714badb2d4fec4b39cc47_MD5.avif  index.md  log.md  writing-enforcer-review.html  writing-enforcer.skill  ziA4WuNP
tools/: README.md
web-forge/personal/claudes-receipts/tauri/src-tauri/: Cargo.toml  tauri.conf.json
web-forge/personal/claudes-receipts/tauri/src-tauri/src/: agent.rs  commands.rs  config.rs  lib.rs  main.rs  parser.rs  session.rs  state.rs  uploader.rs  watcher.rs
(+1068 files in other folders)
